fix: add copyright stuff

--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
         </li>
       </ul>
     </div>
+    <footer>
+      <div id="footer-content">
+        <h3>Newslyglot</h3>
+        <p>&copy; 2025 Newslyglot. All rights reserved.</p>
+      </div>
+    </footer>
     <script src="app.js" defer></script>
   </body>
 </html>
