--- a/share/index.html
+++ b/share/index.html
@@ -7,7 +7,7 @@
       http-equiv="origin-trial"
       content="AlZwgZip8kAx1qsTXdow6mUBZfrh3C7kNpkKVK66xkUOfZ7m8vnkzTDDyO2BQBlllsWLUb1I3aQJUHwdxhpx4QEAAABpeyJvcmlnaW4iOiJodHRwczovL25ld3NseWdsb3QuY29tOjQ0MyIsImZlYXR1cmUiOiJUcmFuc2xhdGlvbkFQSSIsImV4cGlyeSI6MTc1MzE0MjQwMCwiaXNTdWJkb21haW4iOnRydWV9"
     />
-    <title>Document</title>
+    <title>Newslyglot Share</title>
     <link rel="stylesheet" href="/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,6 +33,10 @@
             </div>
           </li>
         </ul>
+        <div id="copy-button">
+          <button>Copy Link</button>
+        </div>
+        <a href="/">Visit Newslyglot</a>
       </div>
     </div>
     <script>
@@ -43,6 +47,7 @@
       const progress = document.getElementById('progress');
       const nativeText = liveDemo.querySelector('.native-text');
       const englishText = liveDemo.querySelector('.english-text');
+      const copyButton = document.querySelector('#copy-button button');
       (async () => {
         liveDemo.style.display = 'none';
         const search = new URLSearchParams(location.search);
@@ -115,6 +120,10 @@
           };
         };
       }
+      copyButton.addEventListener('click', function copyToClipboard() {
+        navigator.clipboard.writeText(location.href);
+        alert('Link copied, share it with your friends!');
+      });
     </script>
   </body>
   <style>
