--- a/share/index.html
+++ b/share/index.html
@@ -38,6 +38,11 @@
         </div>
         <a href="/">Visit Newslyglot</a>
       </div>
+      <div id="extension-link">
+        <p>We are coming up with the full app experience soon...</p>
+        <p>Till then, you can install the extension and start using Newslyglot now!</p>
+        <a href="https://chromewebstore.google.com/detail/newslyglot/nbaccmdmjhbjfjchppdnkpefjjniphan" target="_blank"> Get the extension here. </a>
+      </div>
     </div>
     <script>
       const liveDemo = document.getElementById('demo-live');
