--- a/index.html
+++ b/index.html
@@ -40,6 +40,44 @@
         <img src="newslyglot-screenshot-4.png" alt="newslyglot-screenshot-3" />
       </div>
     </div>
+    <div id="youtube-videos">
+      <div class="youtube-video">
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/6KT5extad_I?si=Iu018CwQqN4Pqdje"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="youtube-video">
+        <iframe
+          width="700"
+          height="394"
+          src="https://www.youtube.com/embed/1PNkJ05gkwI?si=51VUaaIxyZodij4n"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <div class="youtube-video">
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/hBc0YVBKOfw?si=674QSBHaIh7hj_9l"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
     <div id="demo-live">
       <h2>Live Demo</h2>
       <p>Experience the news reading AI right here.</p>
@@ -85,7 +123,7 @@
     <footer>
       <div id="footer-content">
         <h3>Newslyglot</h3>
-        <p>&copy; 2025 Newslyglot. All rights reserved.</p>
+        <p>&copy; Newslyglot. All rights reserved.</p>
       </div>
     </footer>
     <script src="app.js" defer></script>
