feat: move to app from extension

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div id="hero-overlay">
         <div id="hero-content">
           <h1 class="spectral-extrabold">Newslyglot</h1>
-          <p>AI-powered language learning extension.</p>
+          <p>AI-powered language learning app.</p>
           <small>Let the AI read and translate news for you.</small>
         </div>
         <div id="demo-preview">
@@ -23,10 +23,9 @@
       </div>
     </div>
     <div id="extension-link">
-      <p>We are coming up with the full app experience soon...</p>
-      <p>Till then, you can install the extension and start using Newslyglot now!</p>
+      <p>Get the app and start using Newslyglot now!</p>
       <p>
-        <a href="https://chromewebstore.google.com/detail/newslyglot/nbaccmdmjhbjfjchppdnkpefjjniphan" target="_blank"> Get the extension here. </a>
+        <a href="https://newslyglot.web.app" target="_blank"> Get the app. </a>
       </p>
     </div>
     <div id="preview-images">
