--- a/share/index.html
+++ b/share/index.html
@@ -39,10 +39,9 @@
         <a href="/">Visit Newslyglot</a>
       </div>
       <div id="extension-link">
-        <p>We are coming up with the full app experience soon...</p>
-        <p>Till then, you can install the extension and start using Newslyglot now!</p>
+        <p>Get the app and start using Newslyglot now!</p>
         <p>
-          <a href="https://chromewebstore.google.com/detail/newslyglot/nbaccmdmjhbjfjchppdnkpefjjniphan" target="_blank"> Get the extension here. </a>
+          <a href="https://newslyglot.web.app" target="_blank"> Get the app. </a>
         </p>
       </div>
     </div>
