feat: add CTA button to hero center

--- a/index.html
+++ b/index.html
@@ -17,16 +17,11 @@
           <p>AI-powered language learning app.</p>
           <small>Let the AI read and translate news for you.</small>
         </div>
+        <a class="cta-btn" href="https://app.newslyglot.com" target="_blank"> Get the app </a>
         <div id="demo-preview">
           <img src="newslyglot-screenshot.png" alt="demo-preview" />
         </div>
       </div>
-    </div>
-    <div id="extension-link">
-      <p>Get the app and start using Newslyglot now!</p>
-      <p>
-        <a href="https://newslyglot.web.app" target="_blank"> Get the app. </a>
-      </p>
     </div>
     <div id="preview-images">
       <div class="preview-image">
