--- a/share/index.html
+++ b/share/index.html
@@ -41,7 +41,7 @@
       <div id="extension-link">
         <p>Get the app and start using Newslyglot now!</p>
         <p>
-          <a href="https://newslyglot.web.app" target="_blank"> Get the app. </a>
+          <a href="https://app.newslyglot.com" target="_blank"> Get the app </a>
         </p>
       </div>
     </div>
