feat: add blog page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
           <li><a href="#hero">Home</a></li>
           <li><a href="#youtube-videos">Videos</a></li>
           <li><a href="#demo-live">Live Demo</a></li>
+          <li><a href="https://app.newslyglot.com/login?s=w" target="_blank">Get the app</a></li>
+          <li><a href="/blog.html">Blog</a></li>
           <li><a href="https://www.facebook.com/sharer/sharer.php?u=https://newslyglot.com" target="_blank">Share on Facebook</a></li>
           <li><a href="https://twitter.com/intent/tweet?url=https://newslyglot.com&text=Hey%2C%20advance%20your%20language%20skills%20by%20learning%20from%20News!" target="_blank">Share on Twitter</a></li>
           <li>
