feat: add google adSense meta tag

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:description" content="Newslyglot is an AI-powered language learning app for intermediate and advanced learners. Learn German, Spanish, Japanese, and other languages for free by reading native and translated news articles." />
     <meta property="og:image" content="https://newslyglot.com/newslyglot-learn-culture.png" />
     <meta property="og:url" content="https://newslyglot.com" />
+    <meta name="google-adsense-account" content="ca-pub-4786265888761697">
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
