feat: add privacy policy

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Newslyglot is an AI-powered language learning app for intermediate and advanced learners. Learn German, Spanish, Japanese, and other languages for free by reading native and translated news articles." />
     <meta property="og:image" content="https://newslyglot.com/newslyglot-learn-culture.png" />
     <meta property="og:url" content="https://newslyglot.com" />
-    <meta name="google-adsense-account" content="ca-pub-4786265888761697">
+    <meta name="google-adsense-account" content="ca-pub-4786265888761697" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -158,6 +158,7 @@
       <div id="footer-content">
         <h3>Newslyglot</h3>
         <p>&copy; Newslyglot. All rights reserved.</p>
+        <p><a href="/privacy-policy">Privacy Policy</a></p>
       </div>
     </footer>
     <script src="/app.js" defer></script>
